--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -238,6 +238,7 @@
 		<li><a href="https://unsplash.com/" target="_blank">unsplash</a> - free bgs / textures with no login required</li>
 		<li><a href="https://sadgrl.online/webmastery/downloads/tiledbgs" target="_blank">sadgrl.online tiled bgs</a></li>
 		<li><a href="https://patternico.com/" target="_blank">patternico</a> - lets you create tiled bgs!</li>
+		<li><a href="https://www.transparenttextures.com/" target="_blank">transparent textures</a></li>
 
 		<h3 id="archives">collections</h3>
 
