--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>credit</title>
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="link.css" rel="stylesheet" type="text/css" media="all">
@@ -15,20 +15,43 @@
 	<div id="wrapper">
 		<p class="hide"><small><a href="/home" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; links &gt;</small></p>
 
-		<center>
-			<h1>credit</h1>
-		</center>
+		<h1>credit</h1>
 		<h2>sites that have inspired me!</h2>
-		<a href="https://hunipyon.neocities.org/" target="_blank"><img src="/sites/!g/hunipyon.gif"></a><a href="https://yusha.neocities.org/" target="_blank"><img src="/sites/!g/yusha.png"></a><a href="https://turd.neocities.org/" target="_blank"><img src="/sites/!g/turd.png"></a><a href="https://cinni.net" target="_blank"><img src="/sites/!g/cinni.gif"></a><a href="https://pansyseed.neocities.org" target="_blank"><img src="/sites/!g/pansyseed.gif"></a><a href="https://nonkiru.art" target="_blank"><img src="/sites/!g/nonkiru.gif"></a><a href="https://lied.neocities.org"><img src="/sites/!g/lied.gif"></a><a href="https://angel99.neocities.org" target="_blank"><img src="/sites/!g/angel99.gif"></a><a href="https://dokode.moe" target="_blank"><img src="/sites/!g/dokode.moe.gif"></a><a href="https://nyaa.neocities.org" target="_blank"><img src="/sites/!g/nyaa.gif"></a><a href="https://gothiclolita.neocities.org/" target="_blank"><img src="https://gothiclolita.neocities.org/gothiclolita.png" width="88px"></a><a title="tsukinio" href="https://komichi.neocities.org" target="_blank"><img src="/sites/!g/komichi.png"></a><a href="https://nekonokuni.neocities.org" target="_blank"><img src="/sites/!g/nekonokuni.gif"></a><a href="https://incessantpain.neocities.org/" target="_blank"><img src="/sites/!g/incessantpain.gif"></a>
+		<a href="https://hunipyon.neocities.org/" target="_blank"><img src="/sites/!g/hunipyon.gif"></a>
+		<a href="https://yusha.neocities.org/" target="_blank"><img src="/sites/!g/yusha.png"></a>
+		<a href="https://turd.neocities.org/" target="_blank"><img src="/sites/!g/turd.png"></a>
+		<a href="https://cinni.net" target="_blank"><img src="/sites/!g/cinni.gif"></a>
+		<a href="https://pansyseed.neocities.org" target="_blank"><img src="/sites/!g/pansyseed.gif"></a>
+		<a href="https://nonkiru.art" target="_blank"><img src="/sites/!g/nonkiru.gif"></a>
+		<a href="https://lied.neocities.org"><img src="/sites/!g/lied.gif"></a>
+		<a href="https://angel99.neocities.org" target="_blank"><img src="/sites/!g/angel99.gif"></a>
+		<a href="https://dokode.moe" target="_blank"><img src="/sites/!g/dokode.moe.gif"></a>
+		<a href="https://nyaa.neocities.org" target="_blank"><img src="/sites/!g/nyaa.gif"></a>
+		<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="https://gothiclolita.neocities.org/gothiclolita.png" width="88px"></a>
+		<a title="tsukinio" href="https://komichi.neocities.org" target="_blank"><img src="/sites/!g/komichi.png"></a>
+		<a href="https://nekonokuni.neocities.org" target="_blank"><img src="/sites/!g/nekonokuni.gif"></a>
+		<a href="https://incessantpain.neocities.org/" target="_blank"><img src="/sites/!g/incessantpain.gif"></a>
+		<a href="https://faegardens333.neocities.org/" target="_blank"><img src="/sites/!g/faegardens333.gif"></a>
 
-		<h2>stuff used in pages</h2>
+		<h2>stuff used in my website</h2>
 
-		<p>a lot of stuff i use for my site can be found on my <a href="/notebook/links">links</a> page! for the fonts i've used you can look at all of them <a href="/notebook/fonts">here</a> :)</p>
-  
-		<p>i usually have a little space in my pages (usually in the <code>footer</code>) dedicated to credits for things i've used in the respective page. you can also check a page's <mark>source code</mark> since i always put sources and reference links (mostly javascript stuff) in the head for my own use and in case others want to see where i got certain things from! </p>
+		<p>a lot of stuff i use for my site can be found on my <a href="/notebook/links/index.html">links</a> page! for the fonts i've used you can look at all of them <a href="/notebook/links/fonts.html">here</a> :)</p>
+
+		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page!</p>
+
+		<p>on older pages, you'll find some links in the <mark>source code</mark> :)</p>
+
 		<p>if you still cant find what you're looking for, you're always welcome to ask in my chatbox or e-mail. happy coding!</p>
 
-		<p>most pattern bgs / pixels are from foollovers! <a title="decoration materials for websites!" href="https://foollovers.com/" target="_blank"><img src="/sites/!g/foolloversbanner.gif"></a> they have a lot of great stuff for decorating your site! i really recommend checking these site out if you want cute things to decorate your site with.</p>
+		<h2 id="home">homepage v3 credits (currently a wip!)</h2>
+		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
+		<p>these will depend on the theme selected!</p>
+
+		<h3>flower.css</h3>
+		<li>background by <a href="https://www.pexels.com/photo/yellow-wildflowers-against-cloudy-sky-4497731/" target="_blank">Karolina Grabowska</a> from pexels</li>
+
+		<h3>space.css</h3>
+		<li>background by <a href="https://pixelins.tumblr.com/post/100938645642/okay-i-just-really-love-space-here-are-some-tile" target="_blank">pixelins</a></li>
 
 	</div>
 </body>
