--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -23,6 +23,7 @@
 		.no {
 			list-style-image: url('/!g/pix/checkno.png');
 		}
+
 	</style>
 </head>
 
@@ -38,37 +39,40 @@
 			bullet list check imgs by <a class="outlink" href="https://sleepysprout.neocities.org/index1" target="_blank">sleepysprout</a>
 		</p>
 
+		<h3>personal</h3>
+		<ul>
+			<li class="no">fashion index - my fav pieces of my closet and things i want</li>
+			<li class="no">art index v3 - make thumbnails so page loads in one go, resize imgs, be able to sort my art by tags and year</li>
+			<li class="no">art inspiration</li>
+			<li class="no">digital scrapbook - inspired by <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a> and <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a>! these would be pages where i write highlights of each year!</li>
+			<li class="no">journals and planners blog post</li>
+			<li class="dot">add a little msg to the sites on my <a href="/sites/index.html">button wall</a> page!</li>
+			<li class="no">update <a href="/about/index.html" target="_parent">about</a> - i forgot to add <i>foopets</i> to my nostalgia box OMG</li>
+		</ul>
+
 		<h3>music</h3>
 		<ul>
-			<li class="yes"><a href="/music/cds.html" target="_blank">cd collection</a></li>
 			<li class="dot">fix formatting of <a href="/music/recaps/2022.html" target="_blank">2022 music recap</a></li>
-			<li class="dot">write 2023 music recap</li>
+			<li class="no">write 2023 music recap</li>
 			<li class="no">fav music videos - w/ gifs and comments</li>
 			<li class="no">kpop photocard gallery - i dont collect them but i think it would be cool to display the ones i have</li>
 			<li class="no">re-do star pixels for rating listening logs</li>
 			<li class="no">make pixels for VARIOUS music pixel cliques i want to join!
 			<li class="dot">finish <a href="/music/kpop-producers.html" target="_blank">favorite kpop producers</a> page</li>
+			<li class="no">add a footer to all listening logs</li>
+			<li class="no">update cd collection - scan serotonin II, have the <mark>p</mark> tag have an effect on hover</li>
 		</ul>
 
 		<h3>shrines</h3>
 		<ul>
-			<li class="no">revamp code of <a href="/shrines/mizu/index.html" target="_blank">mizu shrine</a> (its very messy + i wanna make a gallery div that i can update frequently)</li>
+			<li class="no">revamp code of <a href="/shrines/mizu/index.html" target="_blank">mizu shrine</a> (its very messy + i wanna make a gallery div that i can update it frequently)</li>
 			<li class="no">siinamota (vocaloid producer)</li>
 			<li class="no">drippin (kpop group)</li>
 		</ul>
 
-		<h3>personal</h3>
-		<ul>
-			<li class="no">fashion - my fav pieces of my closet and things i want</li>
-			<li class="no">art index page v3 - make thumbnails so page loads in one go, resize imgs, be able to sort my art by tags and year</li>
-			<li class="no">art inspiration page</li>
-			<li class="no">digital scrapbook - inspired by <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a> and <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a>! these would be pages where i write highlights of each year, super cool concept tbh</li>
-			<li class="no">journals and planners blog post</li>
-			<li class="dot">add a little msg to the sites on my <a href="/sites/index.html">button wall</a> page!</li>
-		</ul>
-
 		<h3>gaming</h3>
 		<ul>
+			<li class="no">add a background to <a href="/vgs/fashion-dreamer/index.html" target="_parent">fashion dreamer</a></li>
 			<li class="no">finish <a href="/vgs/fortnite/index.html" target="_blank">fortnite fav skins table</a></li>
 			<li class="no">continue adding video game entries (i have such a long way to go...)</li>
 		</ul>
@@ -78,15 +82,21 @@
 			<li class="no">toybox</li>
 			<li class="no">picrews</li>
 			<li class="no">cat memes</li>
-			<li class="no">scanned sticker sheets</li>
 			<li class="no">plushies</li>
 			<li class="no">quotes / lyrics</li>
 			<li class="no">add CSS to <a href="/collection/sticker-sheets/" target="_blank">sticker sheets</a></li>
+			<li class="no">update <a href="/collection/mail-stamps/index.html">mail stamps</a> - have a new one to scan!</li>
+		</ul>
+
+		<h3>sitely</h3>
+		<ul>
+			<li class="dot">doqmeat homepage v3!!!!!!</li>
+			<li class="no">200 x 40 banner</li>
+			<li class="no">50 x 50 icon</li>
 		</ul>
 
 		<h3>other</h3>
 		<ul>
-			<li class="dot">make doqmeat homepage v3!!!!!!</li>
 			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
 			<li class="no">make all pages on my site accessible for different monitor sizes!</li>
 			<ul>but specially these ones:
@@ -95,11 +105,9 @@
 				<li class="no">/journal</li>
 				<li class="no">/shrines/mizu</li>
 			</ul>
-			<li class="no">make 200 x 40 banner</li>
-			<li class="no">make 50 x 50 icon</li>
 			<li class="no">update counter imgs</li>
 		</ul>
-
+		<p>last updated on 04.dec.23</p>
 	</div>
 </body>
 
