--- a/website/index.html
+++ b/website/index.html
@@ -175,10 +175,14 @@
 			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
 
 			<br>
+			<img src="https://doqmeat.neocities.org/!g/pix/mush.gif">
+			<br>
 
-			<a href="mailto:doqmeat@gmail.com">contact email</a>
+			<a href="mailto:doqmeat@gmail.com">e-mail</a>
 			⋆
 			<a href="https://neocities.org/site/doqmeat">neocities profile</a>
+			⋆
+			<a href="https://github.com/doqmeat/doqmeat.neocities.org">github</a>
 
 		</p>
 		<img src="/sites/!g/doqmeat.png">
