--- a/website/home-v3.html
+++ b/website/home-v3.html
@@ -78,6 +78,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"></p>
 
+<p>credit for graphics and js snippets used in this page can be found <a href=/notebook/links/credit.html#home">here!</a></p>
+
 			<p>this website will probably be an <a href="/notebook/sitely/to-dos.html">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail me</a>.</p>
 
 			<h4>notes:</h4>
