homepage v3 grind continues

--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -45,6 +45,7 @@
 
 		<h2 id="home">homepage v3 credits (currently a wip!)</h2>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
+		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">theme switcher js</a></li>
 		<p>these will depend on the theme selected!</p>
 
 		<h3>flower.css</h3>
