calendar img updated to december :)

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -42,8 +42,8 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 <body>
 	<div id="maskimg">
 		<img class="mask" src="/!g/gif/kasio.gif" style="border-radius:20px;width:400px;" alt="">
-				<div class="tape"><img src="/!g/deco/washitape1.png" alt=""></div>
-			<div class="tape2"><img src="/!g/deco/washitape6.png" alt=""></div>
+		<div class="tape"><img src="/!g/deco/washitape1.png" alt=""></div>
+		<div class="tape2"><img src="/!g/deco/washitape6.png" alt=""></div>
 	</div>
 
 
@@ -91,7 +91,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 
 		<iframe src="https://free.timeanddate.com/clock/i8tprgzv/n226/fn3/tct/pct/tt0/tw1/tm1/td1/th2/ta1/tb4" class="time" allowtransparency="true"></iframe>
 
-		<div class="calendarimg"><a class="img" href="https://twitter.com/mitchiri_neko/status/1711161299458302125/photo/1" target="_blank"><img src="/journal/mitchiri-calendar.jpeg" title="art from mitchiri neko!" width="100%"></a></div>
+		<div class="calendarimg"><a class="img" href="https://wadouraku.co.jp/SHOP/90-976.html" target="_blank"><img src="/journal/december-calendar.png" title="art from Yumiko Kobayashi cat postcards!" width="100%" alt="Yumiko Kobayashi cat postcard, link to source"></a></div>
 		<iframe src="https://calendar.sakura.ne.jp/blog_cal.html" class="calendar"></iframe>
 
 		<div class="sticker" style="top: 40%;left: 100%;">
@@ -109,7 +109,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 		<div class="sticker" style="	top: 47%;left: 12%;rotate: -40deg;">
 			<img src="/!g/deco/pencil2.gif" alt="">
 		</div>
-		
+
 		<div class="sticker" style="top:5%;left:100%;"><img src="/!g/deco/pin.png" alt=""></div>
 
 		<br><span class="credit">pixels by <a href="http://whimsical.heartette.net" target="_blank">whimsical</a></span>
