--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -299,6 +299,7 @@
 		<li><a href="https://www.drlinkcheck.com" target="_blank">dr. link checker</a></li>
 		<li><a href="https://www.deepl.com/translator" target="_blank">deepl.com</a> - most accurate translator you'll get. mostly use it for japanese</li>
 		<li><a href="https://tally.so/" target="_blank">tally.so</a> - create free forms</li>
+		<li><a href="https://discord-timestamp-generator.vercel.app/" target="_blank">discord timestamp generator</a></li>
 
 		<h3 id="add-on">firefox add-ons</h3>
 		<li><a href="https://addons.mozilla.org/en-US/firefox/addon/activate-reader-view/" target="_blank">force reader view</a></li>
