--- a/website/home-v3.html
+++ b/website/home-v3.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <!-- 
 coded with love by des!
 started on nov 15 2023
 feel free to look around :) just don't be THAT person and take the entire code for your site...
  -->
+<meta charset="UTF-8">
 
 <head>
 	<!-- for characters -->
-	<meta charset="UTF-8">
 	<title>☆ doqmeat v3 ☆</title>
 	<meta name="description" content="des' personal website">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
@@ -20,7 +20,6 @@ feel free to look around :) just don't be THAT person and take the entire code f
 	<!--	JS for webrings-->
 	<link href="https://adilene.net/webring/webring.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
-
 	<!--	tooltip shit-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -58,7 +57,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<h3>misc</h3>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
-			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
+			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html"><img
+					src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
 
 			<h3>site</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
@@ -68,30 +68,43 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 			<h3>offsite</h3>
 			<a href="https://doqmeat.123guestbook.com/" target="_blank"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
-			<a href="https://neocities.org/site/doqmeat" target="_blank"><img src="/!g/pix/catheadswing.gif"> neocities profile</a>
-			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github</a>
-			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
+			<a href="https://neocities.org/site/doqmeat" target="_blank"><img src="/!g/pix/catheadswing.gif"> neocities
+				profile</a>
+			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img
+					src="/!g/pix/puter.gif"> github</a>
+			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img
+					src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
 		</nav>
 
 		<div id="intro" class="box">
-			<p>hello! my name is <b>des</b> and this is my humble little corner on the internet. it mostly serves as a digital journal where i share whatever i want, however i want it! coding this site has been the most fun i've had online in a long time. so thank you for checking it out! i hope you find something you like.</p>
+			<p>hello! my name is <b>des</b> and this is my humble little corner on the internet. it mostly serves as a digital
+				journal where i share whatever i want, however i want it! coding this site has been the most fun i've had online
+				in a long time. so thank you for checking it out! i hope you find something you like.</p>
 
-			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"></p>
+			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a
+				little message <img src="!g/pix/cat-heart.gif"></p>
 
-			<p>credit for all graphics and js snippets used on this page can be found <a href="/notebook/links/credit.html#home">here!</a></p>
+			<p>credit for all graphics and js snippets used on this page can be found <a
+					href="/notebook/links/credit.html#home">here!</a></p>
 
-			<p>this website will probably be an <a href="/notebook/sitely/to-dos.html">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail me</a>.</p>
+			<p>this website will probably be an <a href="/notebook/sitely/to-dos.html">endless work-in-progress</a> for quite
+				a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache
+				clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail me</a>.</p>
 
 			<h4>notes:</h4>
-			<li>coded in <a href="https://brackets.io/" class="outlink" target="_blank">brackets.io</a> using firefox and tested on chrome when i remember to do so.</li>
+			<li>coded in <a href="https://brackets.io/" class="outlink" target="_blank">brackets.io</a> using firefox and
+				tested on chrome when i remember to do so.</li>
 			<li>recommended to view on a 1536+px wide screen.</li>
-			<li>i've made <i>most</i> of the pages on this site responsive to different screen sizes. with that said, it is not tested or recommended to view on mobile devices.</li>
+			<li>i've made <i>most</i> of the pages on this site responsive to different screen sizes. with that said, it is
+				not tested or recommended to view on mobile devices.</li>
 		</div>
 
 		<div id="status" class="box;">
 			<div class="padding">
 				<h3>status</h3>
-				<a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a>
+				<a href="https://www.imood.com/users/doqmeat"><img
+						src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif"
+						alt="The current mood of doqmeat at www.imood.com" border="0"></a>
 
 				<div id="statuscafe">
 					<div id="statuscafe-username"></div>
@@ -108,7 +121,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		<div id="current" class="box">
 			<h2>currently</h2>
 			<p>playing: fortnite, fashion dreamer</p>
-			<p>reading: <i>he guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto, <i>villain</i> by fujita</p>
+			<p>reading: <i>he guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
+				fujimoto, <i>villain</i> by fujita</p>
 			<p>watching: -</p>
 			<p>listening to:</p>
 			<p>working on: getting into college again!</p>
@@ -124,7 +138,9 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats/!g/orange-eating-stupid.gif"><img src="/collection/cats/!g/orange-eating-stupid.gif" width="100%" alt="gif of a cat eating from his bowl and suddenly stops to look blankly at the camera. after 3 seconds he resumes to eat again."></a>
+			<a href="/collection/cats/!g/orange-eating-stupid.gif"><img src="/collection/cats/!g/orange-eating-stupid.gif"
+					width="100%"
+					alt="gif of a cat eating from his bowl and suddenly stops to look blankly at the camera. after 3 seconds he resumes to eat again."></a>
 		</div>
 
 		<div id="deco-1" class="box">
@@ -134,43 +150,59 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_14.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/loona50x50_14.png" alt="loona fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_0.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/loona50x50_0.png" alt="loona fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_8.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/loona50x50_8.png" alt="loona fanlisting"></a>
 
-			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img src="/!g/web/fanlisting-cliques/flowers.gif"></a>
+			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/flowers.gif"></a>
 
-			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img src="/!g/web/fanlisting-cliques/blackcats.png"></a>
+			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/blackcats.png"></a>
 
-			<a href="http://fan.warmer-climate.net/mushrooms/" target="_blank"><img src="/!g/web/fanlisting-cliques/mush50x50.png"></a>
+			<a href="http://fan.warmer-climate.net/mushrooms/" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/mush50x50.png"></a>
 
-			<a href="http://fan.winterlantern.net/bloodborne/index.php" target="_blank"><img src="/!g/web/fanlisting-cliques/bloodborne_50x50_4.png"></a>
+			<a href="http://fan.winterlantern.net/bloodborne/index.php" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/bloodborne_50x50_4.png"></a>
 
 			<a href="https://fan.redcrown.net/fallout/" target="_blank"><img src="/!g/web/fanlisting-cliques/fallout.png"></a>
 
-			<a href="http://fan.warmer-climate.net/portal2/" target="_blank"><img src="/!g/web/fanlisting-cliques/portal2.png"></a>
+			<a href="http://fan.warmer-climate.net/portal2/" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/portal2.png"></a>
 
-			<a href="https://hellokitty.i-heart-you.net" target="_blank"><img src="/!g/web/fanlisting-cliques/hellokitty50x50_05.gif"></a>
+			<a href="https://hellokitty.i-heart-you.net" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/hellokitty50x50_05.gif"></a>
 
-			<a href="http://hellokitty.ravenbeauty.net/chococat" target="_blank"><img src="/!g/web/fanlisting-cliques/chococat50x50_1.png" alt="chococat fanlisting"></a>
+			<a href="http://hellokitty.ravenbeauty.net/chococat" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/chococat50x50_1.png" alt="chococat fanlisting"></a>
 
 			<br>
-			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png" alt="cafe rose banner"></a>
+			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png"
+					alt="cafe rose banner"></a>
 
 			<br>
-			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting"></a>
+			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png"
+					alt="needy streamer overdose fanlisting"></a>
 
 			<br>
 			<a href="https://dust.kuchiki.net/" target="_blank"><img src="/!g/web/fanlisting-cliques/cats.gif"></a>
 			<br>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-space.gif" alt="appledust space mini-clique"></a>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/lejlart-space.gif" alt="appledust space mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img
+					src="/!g/web/fanlisting-cliques/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
 
 			<br>
-			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black cat</a>
+			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> i am a <a
+				href="https://cliques.moudoku.com/cats" target="_blank">black cat</a>
 
 		</div>
 
@@ -186,7 +218,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<!-- mob psycho 100 / mp100 webring -->
 			<center>
 				<div id='mobring'>
-					<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
+					<script type="text/javascript"
+						src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
 					<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/basic-widget.js"></script>
 				</div>
 			</center>
@@ -212,15 +245,18 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			</div>
 
 			<!-- melonland surf -->
-			<p><object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
+			<p><object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml"
+					style="width: 100px; height: 100px;"></object>
 
 				<!--  moon widget -->
 			<div id="moon">
-				<iframe width="180" height="180" style="border:none;background:black;" src="https://dimden.dev/moon?custom=1" name="dimdenmoonwidget"></iframe>
+				<iframe width="180" height="180" style="border:none;background:black;" src="https://dimden.dev/moon?custom=1"
+					name="dimdenmoonwidget"></iframe>
 			</div>
 
 			<!-- mushroom -->
-			<iframe src="https://shroom.ink/guard.html/?site=doqmeat&shroom=4" height="250px" width="200px" scrolling="no" frameborder="0"></iframe>
+			<iframe src="https://shroom.ink/guard.html/?site=doqmeat&shroom=4" height="250px" width="200px" scrolling="no"
+				frameborder="0"></iframe>
 
 		</div>
 
@@ -231,10 +267,16 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="widget" class="box">
 
-			you are visitor #<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=39059397&main=1" /></noscript>
+			you are visitor #
+			<script language="javascript" type="text/javascript"
+				src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script><noscript><img
+					src="//counter1.fc2.com/counter_img.php?id=39059397&main=1" /></noscript>
 
 			<br>
-			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank" title="enjoy my site? give it a clap!"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
+			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site"
+				target="_blank" title="enjoy my site? give it a clap!"><img
+					src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en"
+					alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
 		</div>
 
 		<div id="button" class="box">
@@ -242,7 +284,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p>and remember to <a class="outlink" href="" target="_blank">not hotlink</a></p>
 
 			<img src="sites/!g/doqmeat.png" alt="doqmeat button">
-			<textarea style="max-width:88px;height:35px;"><a href="https://doqmeat.neocities.org" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
+			<textarea
+				style="max-width:88px;height:35px;"><a href="https://doqmeat.neocities.org" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
 		</div>
 
 		<div id="cat" class="box">
@@ -265,13 +308,14 @@ feel free to look around :) just don't be THAT person and take the entire code f
 	</button>
 	<footer class="box">
 		<p><a href="/notebook/links/credit.html#home">credit</a> / <b>last updated on 03.dec.23</b></p>
-		<p>website coded with love by des! <img src="/!g/pix/cathead.gif" alt=""> hosted on <a class="outlink" href="https://neocities.org/site/doqmeat">neocities</a> since april 11, 2023</p>
+		<p>website coded with love by des! <img src="/!g/pix/cathead.gif" alt=""> hosted on <a class="outlink"
+				href="https://neocities.org/site/doqmeat">neocities</a> since april 11, 2023</p>
 	</footer>
 
 	<script>
 		(function titleScroller(text) {
 			document.title = text;
-			setTimeout(function() {
+			setTimeout(function () {
 				titleScroller(text.substr(1) + text.substr(0, 1));
 			}, 500);
 		}(" doqmeat v3 ☆⌒(*＾-゜)v☆ "));
