08.dec.23 update! journal, stamps, cds

--- a/website/collection/mail-stamps/index.html
+++ b/website/collection/mail-stamps/index.html
@@ -50,16 +50,15 @@ coded with love by des
 			<div class="column">
 				<img src="!g/love.jpg" alt="love written in cursive with floral decoration">
 				<img src="!g/swimming.jpg" alt="two people using a boat with paddles">
+				<img src="!g/us-flag.jpg" alt="3 usa flags">
 			</div>
 			<div class="column">
 				<img src="!g/rabbit.jpg" alt="rabbit">
 				<img src="!g/uk-queen.jpg" alt="the queen from england">
 			</div>
 			<div class="column">
+				<img src="!g/tomie-depaola.jpg" alt="stamp drawn by tomie dePaola">
 				<img src="!g/thank-u.jpg" alt="thank you written in cursive">
-			</div>
-			<div class="column">
-				<img src="!g/us-flag.jpg" alt="3 usa flags">
 			</div>
 		</div>
 
