--- a/website/music/cds.html
+++ b/website/music/cds.html
@@ -35,6 +35,7 @@
 		<h1>CD collection</h1>
 
 		<p> <img src="/!g/deco/dj.gif" align="right"> aka my <b>album shelf</b>! nothing better in life than opening an album and playing the CD as you look through the booklet. the little things...</p>
+		<p>click on IMGs to open them on a new tab!</p>
 
 		<p>for my digital collection feel free to look at my <a href="https://bandcamp.com/lakitu" target="_blank">bandcamp</a> profile.</p>
 		<!-- 	header end div -->
@@ -49,14 +50,16 @@
 	<div id="container">
 		<!-- 			column 1 -->
 		<div class="column">
-   
-   			<div class="cd"><img src="!g/fav-albums/serotonin2.jpg">
+
+			<div class="cd"><img src="!g/cds/yeule-serotonin-cover.jpg" alt="cover for serotonin II by yeule">
 				<div class="hov">
 					<div class="caption">
 						<h3>serotonin II - yeule</h3>
 						<p><span class="fav"></span></p>
 						<p>managed to get this super cheap on ebay lets fucking GOOOOOOOOOOOO</p>
-      <p><span class="placeholder"></span></p>
+						<a class="i" href="!g/cds/yeule-serotonin-page1.jpg" target="_blank"><img src="!g/cds/yeule-serotonin-page1.jpg" alt="album booklet page of yeule's serotonin II"></a>
+						<a class="i" href="!g/cds/yeule-serotonin-page2.jpg" target="_blank"><img src="!g/cds/yeule-serotonin-page2.jpg" alt="album booklet page of yeule's serotonin II"></a>
+						<p>love this album so much it's so pretty!!!</p>
 						<p><span class="date"> 18.nov.23</span></p>
 					</div>
 				</div>
