--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -200,9 +200,12 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>serotonin II - yeule</h2>
-					<p><img src="!g/fav-albums/serotonin2.jpg" width="40%" class="r-img">listening for the first was such an experience.</p>
+					<p><img src="!g/cds/yeule-serotonin-cover.jpg" width="40%" class="r-img">listening for the first was such an experience.</p>
 					it's like this album fucking gets me you know. i really like it. it has such a perfect atmosphere. very awesomesauce to me
-					<p>and btw talking about yeule: i have a feeling that their upcoming album, <b>softscars</b> will be making an appereace in this page. just you wait</p>
+					<p>and btw talking about yeule: i have a feeling that their upcoming album, <b>softscars</b> will be making an appereace in this page. just you wait.</p>
+					<p><mark>08.dec.23 edit:</mark> i managed to get this album super cheap on ebay!!! here's some scans from the booklet. i love the imagery</p>
+					<img src="!g/cds/yeule-serotonin-page1.jpg" width="100%" alt="booklet scan from yeule's serotonin II">
+					<img src="!g/cds/yeule-serotonin-page2.jpg" width="100%" alt="booklet scan from yeule's serotonin II">
 					<p><b>fav songs:</b> an angel held me like a child <img src="/!g/pix/staryellow.gif"> pocky boy <img src="/!g/pix/staryellow.gif"> pixel affection <img src="/!g/pix/staryellow.gif"> poison arrow <img src="/!g/pix/staryellow.gif"> reverie</p>
 					<p><b>links:</b> <a href="https://yeule.bandcamp.com/album/serotonin-ii" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/5HZHvhX5TpJJD6hTgn0j0D?si=nvA7OWQ4RfODuvE0wqPuDg" target="_blank">spotify</a> / <a href="https://youtu.be/Idpg3fzatnY" target="_blank">youtube</a></p>
 				</div>
@@ -607,7 +610,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 		album scans in this page have all been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 19.nov.23</b>
 		<br>
-		<b>credit:</b> page bg is from siinamota's <a href="https://archive.org/details/ikiru-scans/p3.png" target="_blank">ikiru</a> booklet / pop-up bg is from TRPP's self titled album booklet / JS pop-up code from <a href="https://stackoverflow.com/questions/40645032/creating-multiple-modals-on-a-single-page">stackoverflow</a> / 
+		<b>credit:</b> page bg is from siinamota's <a href="https://archive.org/details/ikiru-scans/p3.png" target="_blank">ikiru</a> booklet / pop-up bg is from TRPP's self titled album booklet / JS pop-up code from <a href="https://stackoverflow.com/questions/40645032/creating-multiple-modals-on-a-single-page">stackoverflow</a> /
 		<br>
 		<a href="/home">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music page</a> <img src="/!g/pix/musicnote1.gif"> <a href="#">top</a>
 	</footer>
