--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -104,6 +104,8 @@
 				<li class="no">/notebook</li>
 				<li class="no">/journal</li>
 				<li class="no">/shrines/mizu</li>
+				<li class="no">/music/cds</li>
+				<li class="no">/music/fav-albums</li>
 			</ul>
 			<li class="no">update counter imgs</li>
 		</ul>
