--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -29,7 +29,7 @@
 
 <body>
 	<div id="wrapper">
-		<p class="hide"><small><a href="/home" target="_parent">home</a> > <a href="/notebook" target="_parent">notebook</a> ></small></p>
+		<p class="hide"><small><a href="/home" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt;</small></p>
 		<center>
 			<h1>website to-do's</h1>
 		</center>
@@ -57,7 +57,7 @@
 			<li class="no">fav music videos - w/ gifs and comments</li>
 			<li class="no">kpop photocard gallery - i dont collect them but i think it would be cool to display the ones i have</li>
 			<li class="no">re-do star pixels for rating listening logs</li>
-			<li class="no">make pixels for VARIOUS music pixel cliques i want to join!
+			<li class="no">make pixels for VARIOUS music pixel cliques i want to join!</li>
 			<li class="dot">finish <a href="/music/kpop-producers.html" target="_blank">favorite kpop producers</a> page</li>
 			<li class="no">add a footer to all listening logs</li>
 			<li class="no">update cd collection - scan serotonin II, have the <mark>p</mark> tag have an effect on hover</li>
@@ -90,14 +90,6 @@
 
 		<h3>sitely</h3>
 		<ul>
-			<li class="dot">doqmeat homepage v3!!!!!!</li>
-			<li class="no">200 x 40 banner</li>
-			<li class="no">50 x 50 icon</li>
-		</ul>
-
-		<h3>other</h3>
-		<ul>
-			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
 			<li class="no">make all pages on my site accessible for different monitor sizes!</li>
 			<ul>but specially these ones:
 				<li class="no">/about</li>
@@ -107,6 +99,15 @@
 				<li class="no">/music/cds</li>
 				<li class="no">/music/fav-albums</li>
 			</ul>
+			<li class="dot">add a credit page to /journal</li>
+			<li class="dot">doqmeat homepage v3!!!!!!</li>
+			<li class="no">200 x 40 banner</li>
+			<li class="no">50 x 50 icon</li>
+		</ul>
+
+		<h3>other</h3>
+		<ul>
+			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
 			<li class="no">update counter imgs</li>
 		</ul>
 		<p>last updated on 04.dec.23</p>
