minor changes to listening log

--- a/website/music/listening-log/index.html
+++ b/website/music/listening-log/index.html
@@ -5,7 +5,7 @@
 	<!-- coded with love by des :3 meow -->
 	<meta charset="UTF-8">
 	<title>listening logs</title>
-	<link rel="icon" type="image/x-icon" href="FAVICON">
+	<link rel="icon" type="image/x-icon" href="/music/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/music/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/music/frame.css" rel="stylesheet" type="text/css" media="all">
