created /journal/credit.html + minor changes

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -23,8 +23,8 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
 	<script>
-		(function($) {
-			$(document).ready(function() {
+		(function ($) {
+			$(document).ready(function () {
 				$("[title]").style_my_tooltips({
 					tip_follows_cursor: true,
 					tip_delay_time: 10,
@@ -52,12 +52,13 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 		<div id="col1">
 
 			<h1>des' notepad</h1>
-			<img src="https://doqmeat.neocities.org/!g/deco/diary.gif">
+			<img src="/!g/deco/diary.gif">
 			<br>
-			a collection of random thoughts that i have throughout my days
+			a collection of random thoughts that i have throughout my days. it's a mix of web dev stuff and my personal life.
 			<br>
-			<img src="https://doqmeat.neocities.org/!g/deco/pencil1.gif">
+			<img src="/!g/deco/pencil1.gif">
 			<br>
+			<a href="credit.html" target="iframe_a">credit page</a>
 			<details open>
 				<summary>2023</summary>
 				<a href="2023/12.html" target="iframe_a">december</a>
