--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -59,8 +59,7 @@
 			<li class="no">re-do star pixels for rating listening logs</li>
 			<li class="no">make pixels for VARIOUS music pixel cliques i want to join!</li>
 			<li class="dot">finish <a href="/music/kpop-producers.html" target="_blank">favorite kpop producers</a> page</li>
-			<li class="no">add a footer to all listening logs</li>
-			<li class="no">update cd collection - scan serotonin II, have the <mark>p</mark> tag have an effect on hover</li>
+			<li class="yes">update cd collection - scan serotonin II, have the <mark>p</mark> tag have an effect on hover</li>
 		</ul>
 
 		<h3>shrines</h3>
@@ -85,13 +84,13 @@
 			<li class="no">plushies</li>
 			<li class="no">quotes / lyrics</li>
 			<li class="no">add CSS to <a href="/collection/sticker-sheets/" target="_blank">sticker sheets</a></li>
-			<li class="no">update <a href="/collection/mail-stamps/index.html">mail stamps</a> - have a new one to scan!</li>
+			<li class="yes">update <a href="/collection/mail-stamps/index.html">mail stamps</a> - have a new one to scan!</li>
 		</ul>
 
 		<h3>sitely</h3>
 		<ul>
-			<li class="no">make all pages on my site accessible for different monitor sizes!</li>
-			<ul>but specially these ones:
+			<li class="no">make these pages on my site responsive:</li>
+			<ul>
 				<li class="no">/about</li>
 				<li class="no">/notebook</li>
 				<li class="no">/journal</li>
@@ -99,7 +98,7 @@
 				<li class="no">/music/cds</li>
 				<li class="no">/music/fav-albums</li>
 			</ul>
-			<li class="dot">add a credit page to /journal</li>
+			<li class="yes">add a credit page to /journal</li>
 			<li class="dot">doqmeat homepage v3!!!!!!</li>
 			<li class="no">200 x 40 banner</li>
 			<li class="no">50 x 50 icon</li>
