--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -106,6 +106,7 @@
 
 		<h3>other</h3>
 		<ul>
+			<li class="no">revamp <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a> CSS</li>
 			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
 			<li class="no">update counter imgs</li>
 		</ul>
