--- a/website/vgs/pikmin-4/index.html
+++ b/website/vgs/pikmin-4/index.html
@@ -40,7 +40,7 @@
 <p class="centered"><img src="doodle2.jpg" width="60%"></p>
 <p>when i think of a world without <big>oatchi</big> it makes me wanna cry and throw up <sub>[06.aug.23]</sub></p>
 <hr>
-<p>when i got <a title="journal logs" href="/logs/2023/08#3" target="_blank">sick with covid</a> earlier this month, i used to play this game OBSESSIVELY... and i did finish the main story!!! <span class="spoiler">now i'm currently on the first area of the bonus areas!</span> i think i'm a bit burnt out tho cus i haven't played since i got better KDFJLSK. BUT I DO wanna keep playing it so i can see more of <big>oatchi</big> beloved. and honestly? this game lowkey saved me from not going insane on all of those nights i couldn't sleep cus i was sick so thank you pikmin 4 for that
+<p>when i got <a title="journal logs" href="/journal/2023/08#3" target="_blank">sick with covid</a> earlier this month, i used to play this game OBSESSIVELY... and i did finish the main story!!! <span class="spoiler">now i'm currently on the first area of the bonus areas!</span> i think i'm a bit burnt out tho cus i haven't played since i got better KDFJLSK. BUT I DO wanna keep playing it so i can see more of <big>oatchi</big> beloved. and honestly? this game lowkey saved me from not going insane on all of those nights i couldn't sleep cus i was sick so thank you pikmin 4 for that
 <p>oh also my favorite boss was that one with the disco ball i swear i was smiling SO BIG when i got to that boss idk i just found it so fun and genius <sub>[29.aug.23]</sub></p>
 <hr>
 
